# devinotes_project

./: pyproject.toml
.devcontainer/: .p10k.zsh  .zshrc  devcontainer.json  setup.sh
alembic/: env.py
alembic/versions/: 90e86ab89c7a_init_schema.py
app/: main.py
app/api/: deps.py
app/api/routers/: __init__.py  auth_router.py  label_router.py  notes_router.py  share_router.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  label.py  note.py  share.py  user.py
app/repositories/: __init__.py  label_repository.py  note_repository.py  share_repository.py  user_repository.py
app/services/: __init__.py  auth_service.py  label_service.py  note_service.py  share_service.py
